--- a/utilisateurdetail/utilisateurdetail.css
+++ b/utilisateurdetail/utilisateurdetail.css
@@ -135,7 +135,7 @@ body {
     text-decoration: none;
     border-radius: 5px;
     font-size: 16px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 2px 5px rgba(255, 255, 255, 0.2);
 }
 
 .back-button:hover {
@@ -161,55 +161,51 @@ body {
     margin: 0;
 }
 
+/* Table Section */
+.table-section {
+    margin-top: 20px;
+}
 
-
-.modal {
-    display: none;
-    position: fixed;
-    z-index: 1000;
-    left: 0;
-    top: 0;
+table {
     width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    align-items: center;
-    justify-content: center;
+    border-collapse: collapse;
 }
 
-
-/* pour le modal de confirmation */
-.modal-content {
-    background: white;
-    padding: 20px;
-    border-radius: 8px;
-    text-align: center;
-    width: 300px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+table thead th {
+    background-color: #f5f5f5;
+    padding: 12px;
+    text-align: left;
 }
 
-.modal-buttons {
-    display: flex;
-    justify-content: space-between;
-    margin-top: 15px;
+table tbody td {
+    padding: 12px;
+    border-bottom: 1px solid #ddd;
 }
 
-.modal-buttons button {
-    padding: 10px 20px;
+table tbody td button {
+    background: none;
     border: none;
-    border-radius: 5px;
+    color: red;
+    font-size: 16px;
     cursor: pointer;
 }
 
-.modal-buttons .btn-confirm {
-    background-color: #dc3545;
-    color: white;
+#BtnAction {
+	text-align:center;
 }
 
-.modal-buttons .btn-cancel {
-    background-color: #6c757d;
+.action-button {
+    padding: 8px 18px; 
+    margin-left: 10px;
+    border: none;
     color: white;
+    background-color: #007bff; 
+    border-radius: 5px;
+    font-size: 14px; 
+    cursor: pointer;
+    transition: background-color 0.3s;
 }
 
-.hidden {
-    display: none;
+.action-button:hover {
+    background-color: #0056b3; 
 }
